# prism

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  clippy.toml  prism-calibrate-lut3d-Samsung-Electric-Company-LU28R55-HCJT603937.gamut.json  prism-calibrate-lut3d-Samsung-Electric-Company-S24C230-HTQDC00729.gamut.json  prism.stderr
.github/scripts/: install-libdisplay-info.sh
.github/workflows/: ci.yml
crates/prism/: Cargo.toml
crates/prism-animation/: Cargo.toml
crates/prism-animation/src/: clock.rs  lib.rs
crates/prism-config/: Cargo.toml
crates/prism-config/src/: binds.rs  layer_rule.rs  layout.rs  lib.rs  output.rs  window_rule.rs
crates/prism-drm/: Cargo.toml
crates/prism-drm/src/: breadcrumb.rs  card.rs  cursor_plane.rs  edid.rs  enumerate.rs  frame_clock.rs  gbm_dev.rs  hdr.rs  lib.rs  modifiers.rs  output_ctx.rs  scanout.rs  session.rs
crates/prism-frame/: Cargo.toml
crates/prism-frame/src/: color.rs  dmabuf.rs  element.rs  handle.rs  id.rs  lib.rs  output.rs
crates/prism-input/: Cargo.toml
crates/prism-input/src/: actions.rs  backend_ext.rs  dispatch.rs  gestures.rs  lib.rs  libinput_config.rs  move_grab.rs  pointer.rs  resize_grab.rs  spatial_movement_grab.rs
crates/prism-ipc/: Cargo.toml
crates/prism-ipc/src/: lib.rs  socket.rs
crates/prism-layout/: Cargo.toml
crates/prism-layout/src/: cursor.rs  lib.rs  swipe_tracker.rs
crates/prism-layout/src/input/: mod.rs  scroll_swipe_gesture.rs  scroll_tracker.rs
crates/prism-layout/src/layer/: mapped.rs  mod.rs
crates/prism-layout/src/layout/: closing_window.rs  element.rs  floating.rs  focus_ring.rs  insert_hint_element.rs  mod.rs  monitor.rs  opening_window.rs  scrolling.rs  shadow.rs  tab_indicator.rs  tile.rs  workspace.rs
crates/prism-layout/src/utils/: mod.rs  region.rs  transaction.rs  vblank_throttle.rs
crates/prism-layout/src/window/: mapped.rs  mod.rs  unmapped.rs
crates/prism-protocols/: Cargo.toml
crates/prism-protocols/src/: client.rs  color_management.rs  dmabuf_sync.rs  drm_lease.rs  drm_syncobj.rs  ext_workspace.rs  foreign_toplevel.rs  input_state.rs  layer_shell.rs  lib.rs  output_power.rs  pointer_focus.rs  redraw.rs  rlimit.rs  screencopy.rs  selection.rs  server.rs  session_lock.rs  state.rs  surface_tex.rs
crates/prism-protocols/src/xwayland/: mod.rs  satellite.rs
crates/prism-renderer/: Cargo.toml  build.rs
crates/prism-renderer/examples/: ace_copy_probe.rs
crates/prism-renderer/shaders/: deband_blur.frag  deband_blur.vert  decode.frag  decode.vert  encode.frag  encode.vert
crates/prism-renderer/src/: capture.rs  cross_gpu.rs  damage.rs  device.rs  diagnose.rs  dmabuf.rs  element.rs  error.rs  instance.rs  intermediate.rs  intermediate_capture.rs  lib.rs  local_mirror.rs  lut3d.rs  oneshot.rs  profile.rs  renderer.rs  snapshot.rs  upload.rs
crates/prism-renderer/src/encode_synth/: builder.rs  fragment.rs  mod.rs  push_constants.rs
crates/prism-renderer/src/pipeline/: deband.rs  decode.rs  encode.rs  mod.rs
crates/prism-shmtest/: Cargo.toml
crates/prism-shmtest/src/: main.rs
crates/prism-tune/: Cargo.toml
crates/prism-tune/src/: calibrate.rs  calibrate_lut3d.rs  characterize.rs  color3d.rs  common.rs  gamut.rs  gui.rs  main.rs  validate_lut3d.rs
crates/prism-wlcs/: Cargo.toml
crates/prism-wlcs/conformance/: README.md  expected-failures.txt  run.sh  test-filter.txt
crates/prism-wlcs/src/: lib.rs  main_loop.rs
crates/prism/src/: ipc.rs  main.rs  watcher.rs
docs/: architecture.md  async-render-rework.md  color-management.md  color-negotiation.md  deferred-work.md  phase-2-backend-notes.md  phase-2-progress.md  phase-2-reuse-map.md  phase-2-scanout-followups.md  reuse-map.md  screen-capture.md  status.md
resources/: prism-session  prism-shutdown.target  prism.desktop  prism.service
scripts/: firefox-test.sh  layer-test.sh  tty-test.sh
