[workspace]
resolver = "2"
members = [
    "crates/prism",
    "crates/prism-animation",
    "crates/prism-config",
    "crates/prism-drm",
    "crates/prism-frame",
    "crates/prism-input",
    "crates/prism-ipc",
    "crates/prism-layout",
    "crates/prism-protocols",
    "crates/prism-renderer",
    "crates/prism-shmtest",
    "crates/prism-tune",
    "crates/prism-wlcs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-or-later"
description = "Vulkan-native, HDR-native Wayland compositor"
repository = "https://github.com/computer-whisperer/prism"
authors = ["Christian Balcom"]

[workspace.dependencies]
# in-tree
prism-animation = { path = "crates/prism-animation" }
prism-config = { path = "crates/prism-config" }
prism-drm = { path = "crates/prism-drm" }
prism-frame = { path = "crates/prism-frame" }
prism-input = { path = "crates/prism-input" }
prism-ipc = { path = "crates/prism-ipc" }
prism-layout = { path = "crates/prism-layout" }
prism-protocols = { path = "crates/prism-protocols" }
prism-renderer = { path = "crates/prism-renderer" }

# external
anyhow = "1.0.102"
ash = { version = "0.38", features = ["loaded"] }
bitflags = "2.11.1"
bytemuck = { version = "1.20", features = ["derive"] }
calloop = { version = "0.14.4", features = ["executor", "signals"] }
clap = { version = "4.6.1", features = ["derive"] }
# damascene: GPU UI library (the prism-tune GUI host). crates.io 0.4.1.
damascene-core = "0.4.1"
damascene-winit-wgpu = "0.4.1"
drm-fourcc = "2.2.0"
gbm = { version = "0.18", default-features = false, features = ["drm-support"] }
glam = "0.30"
gpu-allocator = { version = "0.27", default-features = false, features = ["vulkan"] }
half = { version = "2.6", features = ["bytemuck"] }
libc = "0.2"
rspirv = "0.13"
rustix = { version = "1.0.7", features = ["fs", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
tracing = { version = "0.1.44", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# smithay: the computer-whisperer/smithay fork, branch
# prism/dnd-no-data-device-cancel = upstream master (85f83ab6) + one carried
# fix (a drop on a client with no wl_data_device must cancel the drag, not
# report dnd_drop_performed — frozen Firefox tab tear-off over prism-bg; still
# unfixed on master). Pointing the git dep straight at the fork instead of a
# local `[patch]` path keeps the build reproducible off-machine. Repoint to
# upstream/crates.io once the fix lands. Tracking master also means prism is
# adapted for the Dispatch2/GlobalDispatch2 rework (0d14cd65, one
# `delegate_dispatch2!`) and `PointerConstraintsHandler::remove_constraint`
# (df73da71).
[workspace.dependencies.smithay]
git = "https://github.com/computer-whisperer/smithay.git"
rev = "1cf70502"
default-features = false
features = [
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "wayland_frontend",
    "use_system_lib",
]

[workspace.dependencies.smithay-drm-extras]
git = "https://github.com/computer-whisperer/smithay.git"
rev = "1cf70502"

[profile.dev]
opt-level = 1
debug = "limited"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = "limited"
lto = "thin"
