[package]
name = "prism-drm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "KMS frontend: DrmCompositor-equivalent + per-output scanout buffer management"

[dependencies]
anyhow.workspace = true
calloop.workspace = true
drm-fourcc.workspace = true
gbm.workspace = true
libc.workspace = true
libdisplay-info = { version = "0.3.0", features = ["v0_2"] }
prism-config.workspace = true
prism-frame.workspace = true
prism-renderer.workspace = true
rustix.workspace = true
smithay.workspace = true
smithay-drm-extras.workspace = true
thiserror.workspace = true
tracing.workspace = true
