[package]
name = "prism-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Input routing + bindings (libinput via smithay)"

[dependencies]
calloop.workspace = true
prism-config.workspace = true
prism-frame.workspace = true
smithay.workspace = true
tracing.workspace = true
