[package]
name = "prism-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Input dispatch (libinput → seat → focused surface) for prism"

[dependencies]
anyhow.workspace = true
calloop.workspace = true
input = { version = "0.10", features = ["libinput_1_19"] }
libc.workspace = true
prism-config.workspace = true
prism-ipc.workspace = true
prism-layout.workspace = true
prism-protocols.workspace = true
smithay.workspace = true
tracing.workspace = true
