[package]
name = "prism-layout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Window layout (ported from niri's scrollable tiling). Produces FrameDescription"

[dependencies]
prism-config.workspace = true
prism-frame.workspace = true
smithay.workspace = true
tracing.workspace = true
