[package]
name = "prism-tune"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Closed-loop color calibration tool for prism (IPC client + colorimeter + patch surface)"

[[bin]]
name = "prism-tune"
path = "src/main.rs"

# Phase 1 ships the `msg` subcommand — a swaymsg-equivalent wrapper
# around the prism-ipc client vocabulary.
#
# Phase 2 (in progress) adds the `calibrate` subcommand, which drives
# the tristim USB colorimeter against the tristim Wayland patch surface
# and iterates the panel response correction live via the prism IPC.
# tristim is pinned to a git rev (not crates.io yet) — bump the rev when
# the driver or patch-surface API changes shape.

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
prism-ipc = { workspace = true, features = ["clap"] }
serde_json.workspace = true
tristim-driver = { git = "https://github.com/computer-whisperer/tristim.git", rev = "17a4966" }
tristim-display = { git = "https://github.com/computer-whisperer/tristim.git", rev = "17a4966" }
