[package]
name = "prism-tune"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Closed-loop color calibration tool for prism (IPC client + colorimeter + patch surface)"

[[bin]]
name = "prism-tune"
path = "src/main.rs"

# Phase 1 ships the `msg` subcommand — a swaymsg-equivalent wrapper
# around the prism-ipc client vocabulary.
#
# Phase 2 (in progress) adds the `calibrate` subcommand, which drives
# the tristim USB colorimeter against the tristim Wayland patch surface
# and iterates the panel response correction live via the prism IPC.
# tristim is pinned to a git rev (not crates.io yet) — bump the rev when
# the driver or patch-surface API changes shape.

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
prism-ipc = { workspace = true, features = ["clap"] }
prism-renderer.workspace = true
serde_json.workspace = true
tristim-driver = { git = "https://github.com/computer-whisperer/tristim.git", rev = "17a4966" }
tristim-display = { git = "https://github.com/computer-whisperer/tristim.git", rev = "17a4966" }

# prism-tune is numerical calibration code. Matrix and 3D-LUT-cube loops
# read clearer with explicit indices, and the calibration entry points
# legitimately take many measured-parameter inputs and return multi-
# component tuples. Relax the clippy lints that fight that shape rather
# than contort the math into iterator chains / parameter structs.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
needless_range_loop = "allow"
