[package]
name = "prism-wlcs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WLCS (Wayland Conformance Test Suite) integration shim for prism"
repository.workspace = true
authors.workspace = true
publish = false

# WLCS dlopen's this as an integration module: `wlcs libprism_wlcs.so`.
[lib]
crate-type = ["cdylib"]

[dependencies]
prism-protocols.workspace = true
prism-config.workspace = true
prism-renderer.workspace = true
prism-input.workspace = true
prism-ipc.workspace = true
smithay.workspace = true
anyhow.workspace = true
tracing.workspace = true

# The Rust bindings to the WLCS C ABI (Wlcs/Pointer/Touch traits +
# wlcs_server_integration! macro). Same crate smithay's wlcs_anvil uses.
wlcs = "0.1"
# Raw wl_display / wl_proxy access for position_window_absolute. Pinned to
# match the wayland-sys that `wlcs` resolves to so the pointer types unify.
# `dlopen` is enabled deliberately: anything sharing this workspace with the
# prism-tune GUI pulls winit, which forces `wayland-sys/dlopen` ON for the whole
# feature-unified build. Requesting it here too means the FFI below uses the
# handle-based (`WAYLAND_CLIENT_HANDLE`) API consistently whether this crate is
# built standalone or alongside the GUI.
wayland-sys = { version = "0.31", features = ["client", "server", "dlopen"] }
