[package]
name = "prism"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Prism compositor binary"

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
calloop.workspace = true
libc.workspace = true
prism-config.workspace = true
prism-drm.workspace = true
prism-frame.workspace = true
prism-layout.workspace = true
prism-protocols.workspace = true
prism-renderer.workspace = true
smithay.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
